<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS712 : SMS Translator</string>
    <string name="action_settings">विधि चुनाव</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_send">अनुवाद करें</string>
    <string name="hint">Input Sentence in English</string>
    <string name="pref_hostname">Translator Server Address</string>
    <string name="pref_hostname_summary">Pick a translation host</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_translation_host">Translator</string>
    <string name="pref_translation_type">Translation Method</string>
    <string name="pref_translation_type_summary">Choose a translation</string>
    <string name="stored_translation">Stored Translations</string>
    <string name="add_translation">Add Translation</string>
    <string name="speech_speed">Speed of Speech</string>
    <string name="speech_speed_summary">Set to slow for clearer listening</string>
    <string name="_0dp">0dp</string>
    <string name="_1">1</string>
    
</resources>