<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_translation_host" >
        <EditTextPreference
            android:key="pref_hostname"
            android:summary="@string/pref_hostname_summary"
            android:title="@string/pref_hostname" />

        <ListPreference
            android:entries="@array/translationType"
            android:entryValues="@array/translationValues"
            android:key="pref_translation_type"
            android:summary="@string/pref_translation_type_summary"
            android:title="@string/pref_translation_type" />
        
            <ListPreference
            android:entries="@array/speechSpeed"
            android:entryValues="@array/speechSpeedValues"
            android:key="speech_speed"
            android:summary="@string/speech_speed_summary"
            android:title="@string/speech_speed" />
    </PreferenceCategory>

</PreferenceScreen>